# compressnet

./: .gitignore  README.md  create_master.py  model.py  permute_model.py  planstart.md  publish.py  pyproject.toml  results.md  spec.md  test_compare.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/tracks/setup_model_20260413/: index.md  metadata.json  plan.md  spec.md
