[project]
name = "compressnet"
version = "0.1.0"
description = "Tiny MLP Permutation Invariance - Minimal demonstration of neural network symmetry"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
